crates/meilisearch/tests/dynamic_search_rules/snapshots/mod.rs/patch_replaces_arrays/clear_conditions.snap
---
source: crates/meilisearch/tests/dynamic_search_rules/mod.rs
---
{
  "uid": "arrays",
  "active": true,
  "conditions": [],
  "actions": [
    {
      "selector": {
        "id": "1"
      },
      "action": {
        "type": "pin",
        "position": 0
      }
    },
    {
      "selector": {
        "id": "2"
      },
      "action": {
        "type": "pin",
        "position": 2
      }
    }
  ]
}
