crates/meilisearch/tests/dynamic_search_rules/snapshots/mod.rs/patch_replaces_arrays/replace_actions.snap
---
source: crates/meilisearch/tests/dynamic_search_rules/mod.rs
---
{
  "uid": "arrays",
  "active": true,
  "conditions": {},
  "actions": [
    {
      "selector": {
        "id": "3"
      },
      "action": {
        "type": "pin",
        "position": 4
      }
    }
  ]
}
